<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
	android:id="@+id/initialMessage"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
    <Button android:id="@+id/start_tests" android:text="@string/start" android:onClick="startButtonHandler"     android:layout_width="fill_parent" 
    android:layout_height="wrap_content" >
    </Button>
    
    <Button android:text="@string/download_and_install" android:onClick="downloadAndInstallButtonHandler" android:layout_width="fill_parent" 
    android:layout_height="wrap_content" >
    </Button>
    
    <Button android:text="@string/consume_web_service" android:onClick="consumeWebServiceButtonHandler" android:layout_width="fill_parent" 
    android:layout_height="wrap_content" >
    </Button>
</LinearLayout>
