<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    >
 
 	<TableRow>
 	
 		<TextView 
 			android:id="@+id/font_colour_test_text" 
 			android:text="@string/font_test"    
 			android:padding="3dip" 
    	/> 	
    </TableRow>

  	<TableRow>
    	<Button 
    		android:id="@+id/buttonYes" 
    		android:onClick="onClickYes" 
    		android:text="@string/view_yes" 
    		android:width="70dip"
    		android:padding="3dip" 
    	/>  
    </TableRow>
    <TableRow>
    	<Button 
    		android:id="@+id/buttonNo" 
    		android:onClick="onClickNo" 
    		android:text="@string/view_no"
    		android:width="70dip"  
    		android:padding="3dip" 
    	/> 
    </TableRow>
  
</TableLayout>